# taping

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
scripts/: build-release.ps1  install.ps1
taping/: cli.py
