[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taping"
version = "0.2.2"
description = "Tiny range ping and TCP port ping helper for Windows"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [
{ name = "Selahattin Acikgoz" }
]
keywords = ["ping", "tcp", "port", "network", "cli", "windows"]
classifiers = [
"Development Status :: 3 - Alpha",
"Environment :: Console",
"Intended Audience :: System Administrators",
"Operating System :: Microsoft :: Windows",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: System :: Networking",
"Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/HilaliAhmer/taping"
Repository = "https://github.com/HilaliAhmer/taping"
Issues = "https://github.com/HilaliAhmer/taping/issues"

[project.scripts]
taping = "taping.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["taping*"]
exclude = ["build*", "dist*", "release*", "scripts*"]